@@ -24,7 +24,7 @@ reload the project.
 
  OmegaT 2.3.0
  ----------------------------------------------------------------------
-   5 Enhancements
+   6 Enhancements
    2 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
@@ -34,6 +34,9 @@ reload the project.
 
   - Allow blank translations in PO files
   http://sourceforge.net/support/tracker.php?aid=2974663
+
+  - TransTips to consider letter case
+  http://sourceforge.net/support/tracker.php?aid=3027339
 
   Other enhancements:
 
